--- a/src/app/component/products/product-list/product-list.component.html
+++ b/src/app/component/products/product-list/product-list.component.html
@@ -5,7 +5,7 @@
   <div class="col-12 wrap-banner">
     <img src="https://cf.shopee.vn/file/9c078b39474a7b12a33c380ab7ccf1d8_xxhdpi">
   </div>
-  <div class="card" *ngFor="let idProduct of [1,2,3,4,5, 6, 7, 8, 9, 10]">
+  <div class="card card-product-list" *ngFor="let idProduct of [1,2,3,4,5, 6, 7, 8, 9, 10]">
     <div class="card-img-top-products" gdAreas="{{girdAreasHeader}}">
       <div class="view-buy-products" gdArea="header">
         <span>View: 10</span>
