--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -1,3 +1,4 @@
+<app-size-detector></app-size-detector>
 <div id="header-root" class="header-root">
   <header>
     <div class="header-content" [ngClass]="{
@@ -16,10 +17,7 @@
     <router-outlet></router-outlet>
   </app-body-root>
 </div>
-<!--<div id="footerRoot"  class="footer-root">
-  <footer>
-    <div class="footer-content" [ngStyle]="{height: heightFooter}">
-      Hello
-    </div>
-  </footer>
-</div>-->
+
+<div style="background-color:ređ">
+
+</div>
