--- a/src/app/component/products/shop-cart/collapse-product/collapse-item/collapse-item.component.html
+++ b/src/app/component/products/shop-cart/collapse-product/collapse-item/collapse-item.component.html
@@ -7,10 +7,10 @@
 <header class="collapsible-header" (click)="toggleSelected()" *ngIf="triggerExpandAndCollapse">
     <span class="arrow-icon" >
         <i *ngIf="this.selected">
-            <img src="../../../../../../assets/icon/arrowheadupoutline.png" alt="Not found">
+            <img src="../../../../../../assets/icon/arrowheadupoutline.ico" alt="Not found">
         </i>
         <i  *ngIf="!this.selected">
-            <img src="../../../../../../assets/icon/arrowheaddownoutline.png" alt="Not found">
+            <img src="../../../../../../assets/icon/arrowheaddownoutline.ico" alt="Not found">
         </i>
     </span>
 </header>
