--- a/src/app/component/products/menu-left/menu-left.component.html
+++ b/src/app/component/products/menu-left/menu-left.component.html
@@ -1,4 +1,4 @@
-<div class="left-content" id="left-content">
+<div class="left-content" id="left-content" >
   <div class="menu-left"
        [ngClass]="{
         'size-menu-left-change': !arrowStatus,
@@ -7,21 +7,21 @@
   >
     <!--Arrow click-->
     <span class="double-left">
-      <img class="left" [src]="'assets/icon/double_left.png'"
+      <img class="left" [src]="'assets/icon/double_left.ico'"
            (click)="openNav()"
            [ngClass]="{'display-menu-left': !arrowStatus}"
-           *ngIf="!(testMobileService.testMobileStatus$ | async)"
+           *ngIf="this.size === 'lg' || this.size === 'xl'" alt="Not found"
       >
-      <img class="right" [src]="'assets/icon/double_right.png'"
+      <img class="right" [src]="'assets/icon/double_right.ico'"
            (click)="openNav()"
            [ngClass]="{
            'display-menu-left': arrowStatus}"
-           *ngIf="!(testMobileService.testMobileStatus$ | async)"
+           *ngIf="this.size === 'lg' || this.size === 'xl'" alt="Not found"
       >
     </span>
     <!---->
     <div id="mySideNav" class="side-nav-left">
-      <div gdAreas="shopping-cart | category | truck" gdGap="1rem"
+      <div gdAreas="{{menuLeftLayout}}" gdGap="1rem"
            [ngClass]="{
             'size-menu-left-change': !arrowStatus,
             'size-menu-left-original': arrowStatus,
@@ -30,16 +30,16 @@
         <!---->
         <div gdArea="shopping-cart">
           <div class="row">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+            <svg xmlns="http://www.w3.org/2000/svg" [style.width]="iconSize" [style.height]="iconSize" fill="currentColor"
                  class="bi bi-cart2 col-12" viewBox="0 0 16 16"
             >
               <path
                   d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
             </svg>
             <b class="col-12" [ngClass]="{
-                 'display-menu-left': !arrowStatus || (testMobileService.testMobileStatus$ | async)
+                 'display-menu-left': !arrowStatus
                }"
-               *ngIf="!(testMobileService.testMobileStatus$ | async)">
+               *ngIf="this.size === 'lg' || this.size === 'xl'">
               Giỏ hàng
             </b>
           </div>
@@ -47,15 +47,15 @@
         <!---->
         <div gdArea="category">
           <div class="row">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+            <svg xmlns="http://www.w3.org/2000/svg" [style.width]="iconSize" [style.height]="iconSize" fill="currentColor"
                  class="bi bi-cart2 col-12" viewBox="0 0 16 16"
             >
               <path
                   d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
             </svg>
             <b class="col-12" [ngClass]="{
-                 'display-menu-left': !arrowStatus || (testMobileService.testMobileStatus$ | async)
-               }" *ngIf="!(testMobileService.testMobileStatus$ | async)">
+                 'display-menu-left': !arrowStatus
+               }" *ngIf="this.size === 'lg' || this.size === 'xl'">
               Loại sản phẩm
             </b>
           </div>
@@ -63,15 +63,15 @@
         <!---->
         <div gdArea="truck">
           <div class="row">
-            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+            <svg xmlns="http://www.w3.org/2000/svg" [style.width]="iconSize" [style.height]="iconSize" fill="currentColor"
                  class="bi bi-cart2 col-12" viewBox="0 0 16 16"
             >
               <path
                   d="M11.5 4a.5.5 0 0 1 .5.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-4 0 1 1 0 0 1-1-1v-1h11V4.5a.5.5 0 0 1 .5-.5zM3 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm1.732 0h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12v4a2 2 0 0 1 1.732 1z"/>
             </svg>
             <b class="col-12" [ngClass]="{
-                 'display-menu-left': !arrowStatus || (testMobileService.testMobileStatus$ | async)
-               }" *ngIf="!(testMobileService.testMobileStatus$ | async)">
+                 'display-menu-left': !arrowStatus
+               }" *ngIf="this.size === 'lg' || this.size === 'xl'">
               Vận chuyển
             </b>
           </div>
