--- a/src/app/component/products/product-carousel/product-carousel-card.component.scss
+++ b/src/app/component/products/product-carousel/product-carousel-card.component.scss
@@ -1,3 +1,5 @@
+@import "../../../@theme/variable-style/variable.scss";
+
 .card {
   box-shadow: 1px 1px 5px #ccc;
   border-radius: 0;
@@ -27,8 +29,8 @@
   .view-buy-carousel {
     display: flex;
     justify-content: space-between;
-    padding-right: 0.1rem;
-    font-size: 0.5rem;
+    padding: 0.5rem;
+    font-size: 0.65rem;
   }
 
   .card-img-top-carousel {
@@ -86,8 +88,7 @@
     }
 
     .content-card {
-      padding-left: 0;
-      padding-right: 0;
+      padding: 10px;
       margin-left: 0;
       margin-right: 0;
       font-size: x-small;
@@ -109,6 +110,8 @@
     align-items: center;
     margin: auto;
     border-top: 1px solid lightgray;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
     label {
       margin: 0;
@@ -127,7 +130,7 @@
     white-space: nowrap;
     cursor: pointer;
     font-size: 1.5rem;
-    color: burlywood;
+    color:$starColor;
   }
 
   .rate:not(:checked) > label:before {
@@ -155,6 +158,6 @@
 
 .card:hover {
   transform: scale(1.02);
-  border: 1px solid #f63;
-  box-shadow: 8px 8px 5px linear-gradient(-180deg, #f53d2d, #f63);
+  border: $borderHoverCard;
+  box-shadow: $shadowHoverCard;
 }
