--- a/src/app/component/products/product-carousel/product-carousel.component.scss
+++ b/src/app/component/products/product-carousel/product-carousel.component.scss
@@ -1,3 +1,4 @@
+@import "../../../@theme/variable-style/variable.scss";
 ::ng-deep .owl-carousel {
   margin-bottom: 2rem;
   .owl-prev, .owl-next {
@@ -26,6 +27,10 @@
       font-size: 12px;
       text-transform: uppercase;
       font-weight: 700;
+      background: $iconNextCarouselProduct;
+      border: pink;
+
+
     }
   }
 
