--- a/src/app/component/products/scss/footer.component.scss
+++ b/src/app/component/products/scss/footer.component.scss
@@ -1,5 +1,5 @@
 .footer-content {
   display: flex;
   align-items: center;
-  background-color: #fff;
+  background-color: $backgroundColorFooter;
 }
