UPDATE MOBILE, FORM

--- a/src/app/@theme/variable-style/variable.scss
+++ b/src/app/@theme/variable-style/variable.scss
@@ -29,6 +29,7 @@ $colorTextHeader: #000000;
 $colorTextFooter: #000000;
 $collapseColor: #3e92d6;
 $colorPrimary: #4c70c0;
+$colorFormAddressPerson: #4c70c0;
 
 
 $zIndexHeader: 9999;
