--- a/src/app/component/products/form-address-person/form-address-person.component.html
+++ b/src/app/component/products/form-address-person/form-address-person.component.html
@@ -13,16 +13,16 @@
         <label for="address">Address</label>
         <textarea id="address" type="text" rows="2" pInputTextarea></textarea>
       </div>
-      <div class="p-field p-col-12 p-md-3 padding-l-e-10">
+      <div class="p-field p-col-12 p-md-12 p-lg-4">
         <label for="city">City</label>
         <input id="city" type="text" pInputText>
       </div>
-      <div class="p-field p-col-12 p-md-3">
+      <div class="p-field p-col-12 p-md-6 p-lg-4">
         <label for="province">Provinces</label>
         <p-dropdown inputId="province" [options]="provinces" [(ngModel)]="selectedProvince" placeholder="Select" optionLabel="name">
         </p-dropdown>
       </div>
-      <div class="p-field p-col-12 p-md-3">
+      <div class="p-field p-col-12 p-md-6 p-lg-4">
         <label for="zip">Zip</label>
         <input id="zip" type="text" pInputText>
       </div>
