--- a/src/app/component/products/shop-cart/shop-cart.component.html
+++ b/src/app/component/products/shop-cart/shop-cart.component.html
@@ -8,18 +8,18 @@
           <br><br>
         </div>
         <app-list-item-products-shop-cart></app-list-item-products-shop-cart>
-        <app-collapse [contentDesc]="descProduct"></app-collapse>
+        <app-collapse [contentDesc]="descProduct" *ngIf="!isMobile"></app-collapse>
       </div>
       <div class="col-md-7 col-12 row contain-product-detail-left pr-0 ">
         <div class="col-12 pr-0">
           <div class="header-product">
-            <h1>Giày đá bóng ⚡FREESHIP⚡ giày đá banh sân cỏ nhân tạo đã khâu đế 100%</h1>
+            <h1 [ngClass]="{'ellipsis-name-products': isMobile}">Giày đá bóng ⚡FREESHIP⚡ giày đá banh sân cỏ nhân tạo đã khâu đế 100%</h1>
           </div>
-          <div class="detail-product" gdAreas="{{layoutDetailProducts}}" gdGap="0.5rem">
-            <div class="start" gdArea="star"></div>
+          <div class="detail-product" gdAreas="{{layoutDetailProducts}}" gdGap="0.01rem" gdColumns="6rem auto">
+            <div class="start" gdArea="star">5 ★ ★ ★ ★ ★</div>
             <div class="evaluate" gdArea="evaluate-sold">
               <span class="pr-2">111 Đánh giá</span>
-              <span class="pl-2">Đã bán</span>
+              <span class="pl-2">Đã bán 999+</span>
             </div>
           </div>
           <div class="row">
@@ -33,7 +33,7 @@
                 </div>
               </div>
               <div class="color-product row mt-2">
-                <div class="col-lg-3 col-4 pb-3" *ngFor="let i of [1,2,3,4,5,6]" gdAlignRows.lt-md="center">
+                <div class="col-lg-3 col-md-4 col-6 pb-3" *ngFor="let i of [1,2,3,4,5,6]" gdAlignRows.lt-md="center">
                   <div gdAreas="{{layoutColorProducts}}" gdAreas.lt-lg="{{layoutColorProductsLessThanMD}}" class="color-item inline-grid">
                     <div gdArea="image">
                       <img
@@ -52,17 +52,13 @@
               </div>
               <div class="mb-2">
                 <div class="p-fluid p-formgrid p-grid">
-                  <div class="p-col-12 p-md-3 padding-l-e-10">
+                  <div class="p-col-6 p-md-6 padding-l-e-10">
                     <label for="numberBuy">Size</label>
                     <p-dropdown inputId="numberBuy" [options]="sizeBuyOptions" [(ngModel)]="sizeBuySelected"
                                 placeholder="Select" optionLabel="name">
                     </p-dropdown>
                   </div>
-                </div>
-              </div>
-              <div class="mb-2">
-                <div class="p-fluid p-formgrid p-grid">
-                  <div class="p-col-12 p-md-3 padding-l-e-10">
+                  <div class="p-col-6 p-md-6 padding-l-e-10">
                     <label for="numberBuy">Số lượng mua</label>
                     <p-dropdown inputId="numberBuy" [options]="numberBuyOptions" [(ngModel)]="numberBuySelected"
                                 placeholder="Select" optionLabel="name">
@@ -70,7 +66,9 @@
                   </div>
                 </div>
               </div>
-              <app-form-address-person></app-form-address-person>
+              <app-collapse [contentDesc]="" [isFrom]="true">
+                <app-form-address-person></app-form-address-person>
+              </app-collapse>
             </div>
           </div>
 
@@ -84,19 +82,19 @@
                 <div gdArea="compensation">
                   <img [src]="'assets/icon/guard.svg'" alt="Not found">
                   <br>
-                  <span>Hoàn tiền 100%</span>
+                  <span [ngClass]="{'font-size-mobile-shop-cart': isMobile}">Hoàn tiền 100%</span>
                 </div>
 
                 <div gdArea="guarantee">
                   <img [src]="'assets/icon/tick.svg'" alt="Not found">
                   <br>
-                  <span>Mở hộp kiểm tra</span>
+                  <span [ngClass]="{'font-size-mobile-shop-cart': isMobile}">Mở hộp kiểm tra</span>
                 </div>
 
                 <div gdArea="refund">
                   <img [src]="'assets/icon/refund.svg'" alt="Not found">
                   <br>
-                  <span>Đổi trả trong 15 ngày</span>
+                  <span [ngClass]="{'font-size-mobile-shop-cart': isMobile}">Đổi trả trong 15 ngày</span>
                 </div>
               </div>
             </div>
